[package]
name = "cosmwasm-simulate"
version = "0.1.0"
authors = ["KamiD"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
iterator = []
default = ["iterator"]

[dependencies]
clap = "~2.32"
cosmwasm-vm = "1.0.0"
cosmwasm-std = "1.0.0"
wasmer = "2.3.0"
wasmer-compiler-singlepass = "2.3.0"
websocket="0.24.0"
serde_json = "1.0"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
lazy_static = "1.2.0"