[package]
name = "cosmwasm-simulate"
version = "0.1.0"
authors = ["procfs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
iterator = []
default = ["iterator"]

[lib]
name = "cosmwasm_simulate"

[dependencies]
clap = "~2.32"
cosmwasm-vm = "1.0.0"
cosmwasm-std = "1.0.0"
wasmer = "2.3.0"
wasmer-compiler-singlepass = "2.3.0"
websocket="0.24.0"
serde_json = "1.0"
ron = "0.8.0"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
lazy_static = "1.2.0"
tendermint-rpc = { version = "0.25.0", features = ["http-client"] }
tendermint = { version = "0.25.0" }
tokio = "1.0"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
time = "0.3.16"
bech32 = "0.9.1"
sha2 = "0.10.6"
dashmap = "5.4.0"

[build-dependencies]
prost-build = "0.11.1"